--- a/gallery/kocom/outlets.yaml
+++ b/gallery/kocom/outlets.yaml
@@ -3,7 +3,7 @@ meta:
   name_en: "Outlets"
   description: "코콤 콘센트 설정입니다. 방별 콘센트 개수를 다르게 설정할 수 있습니다 (최대 4개). v1.16.0 이상에서 사용 가능합니다."
   description_en: "Kocom outlets configuration. Configure outlet count per room (max 4). Available from v1.16.0."
-  version: "1.1.0"
+  version: "1.1.1"
   author: "wooooooooooook"
   tags: ["switch", "outlet", "kocom"]
   min_version: "1.16.0"
@@ -86,15 +86,15 @@ entities:
             data: [0x00]
           command_on: >-
             [[0x30, 0xBC, 0x00, 0x3B, {{room.room_idx}}, 0x01, 0x00, 0x00, 0xFF,
-            get_from_states('room_{{room.room_idx}}_outlet_2', 'state') == 'ON' ? 0xFF : 0x00,
-            get_from_states('room_{{room.room_idx}}_outlet_3', 'state') == 'ON' ? 0xFF : 0x00,
-            get_from_states('room_{{room.room_idx}}_outlet_4', 'state') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_outlet_2', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_outlet_3', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_outlet_4', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
             0, 0, 0, 0], [0x30, 0xDC]]
           command_off: >-
             [[0x30, 0xBC, 0x00, 0x3B, {{room.room_idx}}, 0x01, 0x00, 0x00, 0x00,
-            get_from_states('room_{{room.room_idx}}_outlet_2', 'state') == 'ON' ? 0xFF : 0x00,
-            get_from_states('room_{{room.room_idx}}_outlet_3', 'state') == 'ON' ? 0xFF : 0x00,
-            get_from_states('room_{{room.room_idx}}_outlet_4', 'state') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_outlet_2', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_outlet_3', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_outlet_4', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
             0, 0, 0, 0], [0x30, 0xDC]]
 
         # Outlet 2 (offset 9)
@@ -113,17 +113,17 @@ entities:
             data: [0x00]
           command_on: >-
             [[0x30, 0xBC, 0x00, 0x3B, {{room.room_idx}}, 0x01, 0x00, 0x00,
-            get_from_states('room_{{room.room_idx}}_outlet_1', 'state') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_outlet_1', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
             0xFF,
-            get_from_states('room_{{room.room_idx}}_outlet_3', 'state') == 'ON' ? 0xFF : 0x00,
-            get_from_states('room_{{room.room_idx}}_outlet_4', 'state') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_outlet_3', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_outlet_4', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
             0, 0, 0, 0], [0x30, 0xDC]]
           command_off: >-
             [[0x30, 0xBC, 0x00, 0x3B, {{room.room_idx}}, 0x01, 0x00, 0x00,
-            get_from_states('room_{{room.room_idx}}_outlet_1', 'state') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_outlet_1', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
             0x00,
-            get_from_states('room_{{room.room_idx}}_outlet_3', 'state') == 'ON' ? 0xFF : 0x00,
-            get_from_states('room_{{room.room_idx}}_outlet_4', 'state') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_outlet_3', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_outlet_4', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
             0, 0, 0, 0], [0x30, 0xDC]]
 
         # Outlet 3 (offset 10)
@@ -142,17 +142,17 @@ entities:
             data: [0x00]
           command_on: >-
             [[0x30, 0xBC, 0x00, 0x3B, {{room.room_idx}}, 0x01, 0x00, 0x00,
-            get_from_states('room_{{room.room_idx}}_outlet_1', 'state') == 'ON' ? 0xFF : 0x00,
-            get_from_states('room_{{room.room_idx}}_outlet_2', 'state') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_outlet_1', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_outlet_2', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
             0xFF,
-            get_from_states('room_{{room.room_idx}}_outlet_4', 'state') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_outlet_4', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
             0, 0, 0, 0], [0x30, 0xDC]]
           command_off: >-
             [[0x30, 0xBC, 0x00, 0x3B, {{room.room_idx}}, 0x01, 0x00, 0x00,
-            get_from_states('room_{{room.room_idx}}_outlet_1', 'state') == 'ON' ? 0xFF : 0x00,
-            get_from_states('room_{{room.room_idx}}_outlet_2', 'state') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_outlet_1', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_outlet_2', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
             0x00,
-            get_from_states('room_{{room.room_idx}}_outlet_4', 'state') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_outlet_4', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
             0, 0, 0, 0], [0x30, 0xDC]]
 
         # Outlet 4 (offset 11)
@@ -171,13 +171,13 @@ entities:
             data: [0x00]
           command_on: >-
             [[0x30, 0xBC, 0x00, 0x3B, {{room.room_idx}}, 0x01, 0x00, 0x00,
-            get_from_states('room_{{room.room_idx}}_outlet_1', 'state') == 'ON' ? 0xFF : 0x00,
-            get_from_states('room_{{room.room_idx}}_outlet_2', 'state') == 'ON' ? 0xFF : 0x00,
-            get_from_states('room_{{room.room_idx}}_outlet_3', 'state') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_outlet_1', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_outlet_2', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_outlet_3', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
             0xFF, 0, 0, 0, 0], [0x30, 0xDC]]
           command_off: >-
             [[0x30, 0xBC, 0x00, 0x3B, {{room.room_idx}}, 0x01, 0x00, 0x00,
-            get_from_states('room_{{room.room_idx}}_outlet_1', 'state') == 'ON' ? 0xFF : 0x00,
-            get_from_states('room_{{room.room_idx}}_outlet_2', 'state') == 'ON' ? 0xFF : 0x00,
-            get_from_states('room_{{room.room_idx}}_outlet_3', 'state') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_outlet_1', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_outlet_2', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
+            get_from_states('room_{{room.room_idx}}_outlet_3', 'state', 'OFF') == 'ON' ? 0xFF : 0x00,
             0x00, 0, 0, 0, 0], [0x30, 0xDC]]
