--- a/gallery/hyundai_imazu/fan.yaml
+++ b/gallery/hyundai_imazu/fan.yaml
@@ -3,21 +3,21 @@ meta:
   name_en: "Ventilation System"
   description: "현대 이마주 환기시스템 설정입니다. 3단 속도를 지원합니다."
   description_en: "Hyundai Imazu ventilation system with 3-speed control."
-  version: "2.0.1"
+  version: "2.0.2"
   author: "wooooooooooook"
   tags: ["fan", "ventilation", "hyundai", "imazu"]
 
 discovery:
   match:
     data: [0x00, 0x01, 0x2b, 0x04, 0x40, 0x11]
-    mask: [0x00, 0xff, 0xff, 0xff, 0xf0, 0xff]
+    mask: [0x00, 0xff, 0xff, 0xff, 0xfd, 0xff]
     
 entities:
   fan:
     - name: 'Room 1 Fan 1'
       state:
         data: [0x00, 0x01, 0x2b, 0x04, 0x40, 0x11]
-        mask: [0x00, 0xff, 0xff, 0xff, 0xf0, 0xff]
+        mask: [0x00, 0xff, 0xff, 0xff, 0xfd, 0xff]
       state_on:
         offset: 7
         data: [0x01]
@@ -30,12 +30,12 @@ entities:
       command_off:
         data: [0x0b, 0x01, 0x2b, 0x02, 0x40, 0x11, 0x02, 0x00]
         ack: [0x0c, 0x01, 0x2b, 0x04, 0x40, 0x11, 0x02, 0x02, 0x00]
-      # 0-100% -> 1-3단계 변환: 0-33->1(약), 34-66->2(중), 67-100->3(강)
+      # 0-100% -> 1-3단계 변환: 0-33->1(약), 34-67->2(중), 68-100->3(강)
       # 0% 속도는 command_off로 처리됨
       command_speed: >-
         x <= 33 ? [[0x0b, 0x01, 0x2b, 0x02, 0x42, 0x11, 0x01, 0x00], [0x0c, 0x01, 0x2b, 0x04]] :
-        (x <= 66 ? [[0x0b, 0x01, 0x2b, 0x02, 0x42, 0x11, 0x03, 0x00], [0x0c, 0x01, 0x2b, 0x04]] :
+        (x <= 67 ? [[0x0b, 0x01, 0x2b, 0x02, 0x42, 0x11, 0x03, 0x00], [0x0c, 0x01, 0x2b, 0x04]] :
         [[0x0b, 0x01, 0x2b, 0x02, 0x42, 0x11, 0x07, 0x00], [0x0c, 0x01, 0x2b, 0x04]])
-      # 장치 속도 0x01/0x03/0x07 -> 1/2/3단계 -> 33/66/100% 변환
+      # 장치 속도 0x01/0x03/0x07 -> 1/2/3단계 -> 33/67/100% 변환
       state_speed: >-
-        data[8] == 0x01 ? 33 : (data[8] == 0x03 ? 66 : (data[8] == 0x07 ? 100 : 0))
+        data[8] == 0x01 ? 33 : (data[8] == 0x03 ? 67 : (data[8] == 0x07 ? 100 : 0))
