--- a/gallery/commax/smart_plugs_new.yaml
+++ b/gallery/commax/smart_plugs_new.yaml
@@ -69,7 +69,7 @@ entities:
       state:
         data: [0xF9, 0x00, '{{i}}', 0x11]
         mask: [0xFF, 0x00, 0xFF, 0xFF]
-      state_value:
+      state_number:
         offset: 4
         length: 3
         decode: bcd
